--- a/index.html
+++ b/index.html
@@ -121,23 +121,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div id="my-contact" class="profile-col profile-col-2">
         <div id="my-name" class="text-grey-dark">
-          Jun CEN<br>
+          Guangtong Zhang<br>
         </div>
         <div id="my-title" class="text-grey">
-          DAMO Academy, Alibaba
+          Academy of Data Science and Artificial Intelligence, Jilin Engineering Normal University
         </div>
         <div id="my-email" class="text-grey-light">
-          jcenaa [at] connect.ust.hk
+          gtzhang [at] jlenu.edu.cn
         </div>
 
 	</div>
         <div class="social-media">
-          <a href="https://scholar.google.com/citations?user=7SKAhBwAAAAJ&hl=en" target="_blank" class="icon-button linkedin">
+          <a href="https://scholar.google.com/citations?hl=en&user=u6lA4ykAAAAJ" target="_blank" class="icon-button linkedin">
           <i class="ai ai-google-scholar-square icon-linkedin"></i>
             <span></span>
           </a>
 
-          <a href="https://github.com/Jun-CEN" target="_blank" class="icon-button github">
+          <a href="https://github.com/zhanggtong" target="_blank" class="icon-button github">
             <i class="fa fa-github icon-github"></i>
             <span></span>
           </a>
