--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span></span>
           </a>
 
-          <a href="mailto:jcenaa@connect.ust.hk" target="_blank" class="icon-button linkedin">
+          <a href="gtzhang@jlenu.edu.cn" target="_blank" class="icon-button linkedin">
             <i class="fa fa-envelope icon-linkedin"></i>
             <span></span>
           </a>
@@ -253,20 +253,20 @@ I'm always looking for related colaboration. If you are interested to chat with 
 				<i class="fa fa-graduation-cap" aria-hidden="true"></i>
 				<strong>Education</strong>
 			</h3>
-			<b>The Hong Kong University of Science and Technology</b><br>
+			<b>The Jilin University</b><br>
 			<ul>
-        <li>Ph.D in Robotics, Sep. 2020 - Oct. 2024</li>
-        <li>Mentor: <a href="https://cqf.io/" target="_blank">Prof. Qifeng Chen</a> and <a href="https://scholar.google.com/citations?user=Oo7c22wAAAAJ&hl=zh-CN" target="_blank">Prof. Michael Yu Wang</a> </li>
+        <li>Ph.D in Computer Application Technology, Sep. 2025 - Now </li>
+        <li>Mentor: <a href="https://ccst.jlu.edu.cn/info/1194/17199.htm" target="_blank">Prof. Tian Bai</a></li>
       </ul>
-      <b>The Hong Kong University of Science and Technology</b><br>
+      <b>The Guangxi Normal University</b><br>
         <ul>
-          <li>M.Sc in Mechanical Engineering, Sep. 2019 - Oct. 2020</li>
-          <li>Mentor: <a href="https://seng.hkust.edu.hk/about/people/faculty/lilong-cai" target="_blank">Prof. Lilong Cai</a></li>
+          <li>M.Sc in Software Engineering, Sep. 2021 - Jun. 2024</li>
+          <li>Mentor: <a href="http://www.cs.gxnu.edu.cn/zbn/main.htm" target="_blank">Prof. Bineng Zhong</a></li>
         </ul>
-      <b>Zhejiang University</b><br>
+      <b>The Henan Polytechnic University</b><br>
       <ul>
-        <li>B.Eng in Mechatronics Engineering, Sep. 2015 - Oct. 2019</li>
-        <li>Mentor: <a href="http://me.zju.edu.cn/meenglish/2016/1129/c15493a734703/page.htm" target="_blank">Prof. Jinghua Xu</a></li>
+        <li>B.Eng in Computer Science and Technology, Sep. 2015 - Jun. 2019</li>
+        <!-- <li>Mentor: <a href="http://me.zju.edu.cn/meenglish/2016/1129/c15493a734703/page.htm" target="_blank">Prof. Jinghua Xu</a></li> -->
       </ul>
     </div>
   
