--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>
   <div class="bio-body" style="overflow:hidden;">
     <p>
-      I am an algorithm expert in <a href="https://damo.alibaba.com/?language=zh" target="_blank">DAMO Academy, Alibaba</a>, where I focus on multi-modality model and embodied AI.
-I got my Ph.D. at the <a href="http://ri.ust.hk" target="_blank">Robotics Institute</a>, <a href="https://www.ust.hk" target="_blank">The Hong Kong University of Science and Technology</a>, where I work on computer vision and autonomous driving under the supervision of <a href="https://cqf.io/" target="_blank">Prof. Qifeng Chen</a> and <a href="https://scholar.google.com/citations?user=Oo7c22wAAAAJ&hl=zh-CN" target="_blank">Prof. Michael Yu Wang</a>.
- 
-I'm always looking for related colaboration. If you are interested to chat with me, feel free to drop me an <a href="mailto:jcenaa@connect.ust.hk" target="_blank">email</a>.
-
+      I am currently serving as Director of the Computer Science and Technology Teaching and Research Section.
+		Executive Member of the Computer Application Committee of the China Computer Federation (CCF), and Member of the China Computer Federation. 
+		In 2025, I was awarded support from the Young Scientists Fund (C) of the National Natural Science Foundation of China (NSFC). 
+		Over the past two years, I haave published nearly 10 papers in the field of artificial intelligence on top-tier international academic platforms (including CCF-A and SCI Q1 TOP journals/conferences). 
+		Currently, I assists Jilin University in supervising master's students, all of whom have either published or have under review top-tier academic achievements. 
       <br>
     </p>
 
@@ -235,16 +235,13 @@ I'm always looking for related colaboration. If you are interested to chat with 
 			</h3>
       <ul>
         <!-- <li><b>Multi-modality</b></li> -->
-        <li><b>Embodied AI, Multi-modality LLM</b></li>
-        <a href="https://arxiv.org/pdf/2506.21539" target="_blank">[WorldVLA]</a><a href="https://arxiv.org/pdf/2503.03464" target="_blank">[Survey]</a><a href="https://arxiv.org/abs/2402.10534" target="_blank">[VLP]</a><a href="https://ieeexplore.ieee.org/abstract/document/9681231" target="_blank">[VPN]</a>
-        <li><b>Autonomous Driving</b></li>
-        <a href="https://arxiv.org/abs/2403.13261" target="_blank">[STC]</a><a href="https://arxiv.org/abs/2207.01452" target="_blank">[REAL]</a><a href="https://arxiv.org/abs/2108.04562" target="_blank">[DML]</a><a href="https://arxiv.org/abs/2112.01135" target="_blank">[MLUC]</a>
-        <li><b>3D Segmentation</b></li>
-        <a href="https://arxiv.org/abs/2409.08083" target="_blank">[SimMAT]</a><a href="https://arxiv.org/abs/2403.17010" target="_blank">[Calib3D]</a><a href="https://arxiv.org/abs/2305.14207" target="_blank">[Segment Any RGBD]</a><a href="https://arxiv.org/abs/2306.09347" target="_blank">[Segment Any Point Cloud]</a><a href="https://arxiv.org/abs/2405.10305" target="_blank">[PSG-4D]</a><a href="https://arxiv.org/abs/2307.04091" target="_blank">[CMDFusion]</a>
-        <li><b>Open-set Recognition</b></li>
-        <a href="https://openreview.net/forum?id=xLr0I_xYGAs" target="_blank">[UOSR]</a><a href="https://arxiv.org/abs/2303.15467" target="_blank">[PSL]</a>
-        <li><b>Continual Learning</b></li>
-        <a href="https://arxiv.org/abs/2403.08568" target="_blank">[CPrompt]</a><a href="https://arxiv.org/abs/2211.00833" target="_blank">[FrameMaker]</a><a href="https://ieeexplore.ieee.org/abstract/document/9665922" target="_blank">[KD-TIL]</a>
+        <li><b>Single Object Tracking</b></li>
+        <a href="https://dl.acm.org/doi/abs/10.1145/3595916.3626410" target="_blank">[UPVPT]</a>
+        <li><b>Visual-Language Object Tracking</b></li>
+        <a href="https://www.ijcai.org/proceedings/2024/0183.pdf" target="_blank">[DMTrack]</a>
+        <li><b>Multi-Source Image Object Tracking</b></li>
+        <a href="https://ieeexplore.ieee.org/abstract/document/10447728" target="_blank">[VADT]</a>
+      
       </ul>
     </div>
 
@@ -266,14 +263,13 @@ I'm always looking for related colaboration. If you are interested to chat with 
       <b>The Henan Polytechnic University</b><br>
       <ul>
         <li>B.Eng in Computer Science and Technology, Sep. 2015 - Jun. 2019</li>
-        <!-- <li>Mentor: <a href="http://me.zju.edu.cn/meenglish/2016/1129/c15493a734703/page.htm" target="_blank">Prof. Jinghua Xu</a></li> -->
       </ul>
     </div>
   
   </div>
 </div>
 
-<!-- <div id="news" class="bio">
+<div id="news" class="bio">
   <h1 class="md-heading text-left">
     <i class="fa fa-tasks" aria-hidden="true"></i>
     News
@@ -287,7 +283,7 @@ I'm always looking for related colaboration. If you are interested to chat with 
    	<li class="indented" data-date="[Oct, 2022]"> One paper accepted to 36th Conference on Neural Information Processing Systems, GLFrontiers, and selected for <b><span style="color: red;">Oral</span></b> presentation.</li>
    	<li class="indented" data-date="[Oct, 2022]"> Two papers accepted to 36th Conference on Neural Information Processing Systems, and one paper selected for <b><span style="color: red;">Spotlight</span></b> presentation.</li>
   </ul>
-</div> -->
+</div>
 
 <!-- <div class="wrapper"> -->
   <div id="timeline" class="timeline-brief">
