--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 	  
 	<!-- <meta name="google-site-verification" content="u_--0s_Uw50r4zCgRrzltkmFhNCduYOJwPGlKVTuNJU" /> -->
 
-  <title>Jun CEN</title>
+  <title>Guangtong Zhang</title>
   <meta name="description" lang="en" content="This is an academic website for Will Hua">
-  <meta name="keywords" lang="en" content="Jun CEN" />
+  <meta name="keywords" lang="en" content="Guangtong Zhang" />
   
 
   <link rel="shortcut icon" href="images/J.jpeg">
@@ -220,7 +220,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>
   <div class="bio-body" style="overflow:hidden;">
     <p>
-      现为吉林工程技术师范学院数据科学与人工智能学院计算机科学与技术教研室主任。
+      现为吉林工程技术师范学院计算机科学与技术教研室主任。
 		中国计算机协会（CCF）计算机应用委员会执行委员，中国计算机协会会员。
 		2025年获批国家自然科学基金委青年基金（青C）支持。
 		近两年来，在国际顶级学术平台（包括CCF-A、SCI一区TOP）等发表人工智能领域文章近十篇。
@@ -237,10 +237,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li><b>Single Object Tracking（单目标跟踪）</b></li>
         <a href="https://dl.acm.org/doi/abs/10.1145/3595916.3626410" target="_blank">[UPVPT]</a>
         <li><b>Visual-Language Object Tracking（视觉语言目标跟踪）</b></li>
-        <a href="https://www.ijcai.org/proceedings/2024/0183.pdf" target="_blank">[DMTrack]</a>
+        <a href="https://www.ijcai.org/proceedings/2024/0183.pdf" target="_blank">[DMTrack]</a><a href="https://ieeexplore.ieee.org/abstract/document/10510485" target="_blank">[OSDT]</a>
         <li><b>Multi-Source Image Object Tracking（多源图像目标跟踪）</b></li>
         <a href="https://ieeexplore.ieee.org/abstract/document/10447728" target="_blank">[VADT]</a>
-      
+       <li><b>我也在探索其他领域的研究，包括具身智能（Embodied Intelligence），多模态学习（Multimodal Learning）,小样本学习（Few-shot Learning）。如果有兴趣，欢迎给我发邮件联系我，我将在24h内回复。</b></li>
       </ul>
     </div>
 
@@ -252,12 +252,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<b>The Jilin University（吉林大学）</b><br>
 			<ul>
         <li>Ph.D in Computer Application Technology（计算机应用技术博士）, Sep. 2025 - Now </li>
-        <li>Mentor: <a href="https://ccst.jlu.edu.cn/info/1194/17199.htm" target="_blank">Prof. Tian Bai</a></li>
+        <li>Mentor: <a href="https://ccst.jlu.edu.cn/info/1194/17199.htm" target="_blank">Prof. Tian Bai（白天教授）</a></li>
       </ul>
       <b>The Guangxi Normal University（广西师范大学）</b><br>
         <ul>
           <li>M.Sc in Software Engineering（软件工程硕士）, Sep. 2021 - Jun. 2024</li>
-          <li>Mentor: <a href="http://www.cs.gxnu.edu.cn/zbn/main.htm" target="_blank">Prof. Bineng Zhong</a></li>
+          <li>Mentor: <a href="http://www.cs.gxnu.edu.cn/zbn/main.htm" target="_blank">Prof. Bineng Zhong（钟必能教授）</a></li>
         </ul>
       <b>The Henan Polytechnic University（河南理工大学）</b><br>
       <ul>
@@ -910,6 +910,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="reviewer-section">
         <div class="reviewer-column">International Joint Conference on Artificial Intelligence (IJCAI-2025, CCF-A) PC</div>
         <div class="reviewer-column">Association for the Advancement of Artificial Intelligence (AAAI-2025, CCF-A) PC</div>
+		<div class="reviewer-column">Association for the Advancement of Artificial Intelligence (ACMMM-2025, CCF-A) PC</div>
         <div class="reviewer-column">Pattern Recognition (PR, CCF-B, SCI Q1 TOP) PC</div>
 
 
