--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span></span>
           </a>
 
-          <a href="https://www.linkedin.com/in/jun-cen-45b995219/" target="_blank" class="icon-button linkedin">
+          <!-- <a href="https://www.linkedin.com/in/jun-cen-45b995219/" target="_blank" class="icon-button linkedin">
             <i class="fa fa-linkedin icon-linkedin"></i>
             <span></span>
-          </a>
+          </a> -->
          
           <a href="work/Resume_Jun_CEN.pdf" target="_blank" class="icon-button github">
             <i class="ai ai-cv icon-github"></i>
