--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>
   <div class="bio-body" style="overflow:hidden;">
     <p>
-      现为吉林工程技术师范学院计算机科学与技术教研室主任。
+      助教，现为吉林工程技术师范学院计算机科学与技术教研室主任。
 		中国计算机协会（CCF）计算机应用委员会执行委员，中国计算机协会会员。
 		2025年获批国家自然科学基金委青年基金（青C）支持。
 		近两年来，在国际顶级学术平台（包括CCF-A、SCI一区TOP）等发表人工智能领域文章近十篇。
@@ -271,16 +271,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="news" class="bio">
   <h1 class="md-heading text-left">
     <i class="fa fa-tasks" aria-hidden="true"></i>
-    News（新闻）
+    2025 Year News（2025年新闻）
   </h1>  
   <ul>
-    	<li class="indented" data-date="[Feb, 2024]"> Give a talk on <a href="https://arxiv.org/pdf/2402.03675.pdf">protein-protein interaction prediction</a> to <a href="https://jian-tang.com/students/">Jian Tang's group</a>. [<a href="files/ppiretrieval.pdf">Slide</a>]</li>
-	<li class="indented" data-date="[Dec, 2023]"> Give a talk on <a href="https://arxiv.org/pdf/2304.14621.pdf">structure-based molecule design</a> at LoG2023 Montreal. [<a href="files/mudiff.pdf">Slide</a>][<a href="https://www.youtube.com/watch?v=Z5l-gaV-DUo">Video</a>]</li>
-    	<li class="indented" data-date="[Nov, 2023]"> One paper accepted to 2nd Learning on Graphs Conference.</li>
-    	<li class="indented" data-date="[Oct, 2023]"> One paper accepted to 37th Conference on Neural Information Processing Systems.</li>
-    	<li class="indented" data-date="[Sep, 2023]"> One paper accepted to 12th International Conference on Complex Networks and their Applications.</li>
-   	<li class="indented" data-date="[Oct, 2022]"> One paper accepted to 36th Conference on Neural Information Processing Systems, GLFrontiers, and selected for <b><span style="color: red;">Oral</span></b> presentation.</li>
-   	<li class="indented" data-date="[Oct, 2022]"> Two papers accepted to 36th Conference on Neural Information Processing Systems, and one paper selected for <b><span style="color: red;">Spotlight</span></b> presentation.</li>
+    	<li class="indented" data-date="[8, 2025]"> 成功获批国家自然科学基金委青年基金（青C）项目资助，项目编号：6250075249，项目起止时间：2026.1-2028.12</li>
+	  <li class="indented" data-date="[8, 2025]"> 入选中国计算机协会计算机应用委员会执行委员</li>
+	  <li class="indented" data-date="[8, 2025]"> 成功协助举办中国计算机应用大会（NNCA）的院长论坛环节.</li>
+	<li class="indented" data-date="[5, 2025]"> 拟录取进入吉林大学攻读计算机应用技术博士学位，导师为白天教授 </li>
   </ul>
 </div>
 
@@ -913,7 +910,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="reviewer-column">Association for the Advancement of Artificial Intelligence (ACMMM-2025, CCF-A) PC</div>
         <div class="reviewer-column">Pattern Recognition (PR, CCF-B, SCI Q1 TOP) PC</div>
 
-
+   </div>
 	<div class="reviewer-title">Academic Appointment（学术任职）:</div>
       <div class="reviewer-section">
         <div class="reviewer-column">中国计算机学会计算机应用委员会执行委员，2025.9</div>
