--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </h1>  
   <ul>
     	<li class="indented" data-date="[9, 2025]"> 成功获批国家自然科学基金委青年基金（青C）项目资助，项目编号：6250075249，项目起止时间：2026.1-2028.12</li>
-	  <li class="indented" data-date="[8, 2025]"> 入选中国计算机协会计算机应用委员会执行委员</li>
+	  <li class="indented" data-date="[8, 2025]"> 入选中国计算机协会计算机应用委员会执行委员, 推荐人：黄岚教授、白天教授</li>
 	  <li class="indented" data-date="[8, 2025]"> 成功协助举办中国计算机应用大会（NNCA）的院长论坛环节.</li>
 	<li class="indented" data-date="[5, 2025]"> 拟录取进入吉林大学攻读计算机应用技术博士学位，导师为白天教授 </li>
 	  <li class="indented" data-date="[3, 2025]"> 担任吉林工程技术师范学院计算机科学与技术教研室主任 </li>
