--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
           <div class="timeline-item">
             <div class="timeline-date">
-              <img class="social-icon" src="images/jlenu.jpg"/>
+              <img class="social-icon" src="images/jlenus.jpg"/>
               3, 2025 - Now
             </div>
             <div class="timeline-title">
@@ -327,7 +327,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
           <div class="timeline-item">
             <div class="timeline-date">
-              <img class="social-icon" src="images/jlenu.png"/>
+              <img class="social-icon" src="images/jlenu.gif"/>
               7, 2024 - Now
             </div>
             <div class="timeline-title">
