--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- <a class="page-link" href="#codebase"><b>GitHub</b></a> -->
     <a class="page-link" href="#awards"><b>Honors & Awards</b></a>
     <a class="page-link" href="#academicservices"><b>Academic Services </b></a>
+    <a class="page-link" href="#educational"><b>Educational Work</b></a> 
     <!--<a class="page-link" href="#otherprojects">Projects</a>-->
     <!-- Button for Posts -->
   </div>
@@ -240,7 +241,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://www.ijcai.org/proceedings/2024/0183.pdf" target="_blank">[DMTrack]</a><a href="https://ieeexplore.ieee.org/abstract/document/10510485" target="_blank">[OSDT]</a>
         <li><b>Multi-Source Image Object Tracking（多源图像目标跟踪）</b></li>
         <a href="https://ieeexplore.ieee.org/abstract/document/10447728" target="_blank">[VADT]</a>
-       <li><b>我也在探索其他领域的研究，包括具身智能（Embodied Intelligence），多模态学习（Multimodal Learning）,小样本学习（Few-shot Learning）。如果有兴趣，欢迎给我发邮件联系我，我将在24h内回复。</b></li>
+       <li><b>我也在探索其他领域的研究，包括具身智能（Embodied Intelligence），多模态学习（Multi-modal Learning）,小样本学习（Few-shot Learning）。如果有兴趣，欢迎给我发邮件联系我，我将在24h内回复。</b></li>
       </ul>
     </div>
 
@@ -276,7 +277,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <ul>
     	<li class="indented" data-date="[9, 2025]"> 成功获批国家自然科学基金委青年基金（青C）项目资助，项目编号：6250075249，项目起止时间：2026.1-2028.12</li>
 	  <li class="indented" data-date="[8, 2025]"> 入选中国计算机协会计算机应用委员会执行委员, 推荐人：黄岚教授、白天教授</li>
-	  <li class="indented" data-date="[8, 2025]"> 成功协助举办中国计算机应用大会（NNCA）的院长论坛环节.</li>
+	  <li class="indented" data-date="[8, 2025]"> 成功协助举办中国计算机应用大会（NCCA）的院长论坛环节.</li>
 	<li class="indented" data-date="[5, 2025]"> 拟录取进入吉林大学攻读计算机应用技术博士学位，导师为白天教授 </li>
 	  <li class="indented" data-date="[3, 2025]"> 担任吉林工程技术师范学院计算机科学与技术教研室主任 </li>
   </ul>
@@ -295,7 +296,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="timeline-item">
         <div class="timeline-date">
           <img class="social-icon" src="images/ccf.png"/>
-          8, 2025 - Now
+          Aug, 2025 - Now
         </div>
         <div class="timeline-title">
           执行委员 <a href="https://tc.ccf.org.cn/tcapp/" target="_blank">计算机学会计算机应用委员会</a>
@@ -313,14 +314,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="timeline-item">
             <div class="timeline-date">
               <img class="social-icon" src="images/jlenus.jpg"/>
-              3, 2025 - Now
+              Mar, 2025 - Now
             </div>
             <div class="timeline-title">
-             计算机教研室主任 <a href="https://yylxy.jlenu.edu.cn/" target="_blank">吉林工程技术师范学院数据科学与人工智能学院</a>
+             计算机教研室主任 <a href="https://yylxy.jlenu.edu.cn/" target="_blank">数据科学与人工智能学院</a>
             </div>
             <div class="timeline-desc">
               <div class="timeline-host">
-                担任行政工作：协调计算机教研室研究与发展。
+                担任行政工作：协调计算机科学与技术教研室研究与发展。
               </div>
             </div>
           </div>
@@ -328,10 +329,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="timeline-item">
             <div class="timeline-date">
               <img class="social-icon" src="images/jlenu.gif"/>
-              7, 2024 - Now
+              Jul, 2024 - Now
             </div>
             <div class="timeline-title">
-              助教  <a href="https://www.jlenu.edu.cn/" target="_blank">吉林工程技术师范学院（Jlenu）</a>
+              助教  <a href="https://www.jlenu.edu.cn/" target="_blank">吉林工程技术师范学院</a>
             </div>
             <div class="timeline-desc">
               <div class="timeline-host">
@@ -794,8 +795,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    Honors & Awards（参与项目）
     </h1>
     <ul>
-	<li> 国家自然科学基金青年基金项目（青C），复杂场景下基于语言信息鲁棒优化的视觉-语言目标跟踪，项目编号：6250075249，项目起止时间：2026.1-2028.12。（主持）</li>
-	<li>  广西自然科学基金重点项目，实用轻量化目标跟踪算法研究，项目编号：2022GXNSFDA035079，项目起止时间：2022.4-2026.3。（参与）</li>
+	<li> 国家自然科学基金青年基金项目（青C），复杂场景下基于语言信息鲁棒优化的视觉-语言目标跟踪，项目编号：6250075249，项目起止时间：2026.1-2028.12（主持）</li>
+	<li>  广西自然科学基金重点项目，实用轻量化目标跟踪算法研究，项目编号：2022GXNSFDA035079，项目起止时间：2022.4-2026.3（参与）</li>
     </ul>
   </div>
 </div>
@@ -852,16 +853,104 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		
       <div class="reviewer-title">Conference and Journal Reviewer（会议及期刊审稿）:</div>
       <div class="reviewer-section">
-        <div class="reviewer-column">International Joint Conference on Artificial Intelligence (IJCAI-2025, CCF-A) PC</div>
-        <div class="reviewer-column">Association for the Advancement of Artificial Intelligence (AAAI-2025, CCF-A) PC</div>
-		<div class="reviewer-column">Association for the Advancement of Artificial Intelligence (ACMMM-2025, CCF-A) PC</div>
-        <div class="reviewer-column">Pattern Recognition (PR, CCF-B, SCI Q1 TOP) PC</div>
+        <div class="reviewer-column">International Joint Conference on Artificial Intelligence (IJCAI-2025, CCF-A), PC</div>
+        <div class="reviewer-column">Association for the Advancement of Artificial Intelligence (AAAI-2025, CCF-A), PC</div>
+		<div class="reviewer-column">Association for the Advancement of Artificial Intelligence (ACMMM-2025, CCF-A), PC</div>
+        <div class="reviewer-column">Pattern Recognition (PR, CCF-B, SCI Q1 TOP), PC</div>
    </div>
     </div>
   </div>
 </div>
+	
+<div class="wrapper">
+<div id="educational" class="educational">
+  <h1 class="md-heading text-left">
+    <i class="fa fa-file" aria-hidden="true"></i>
+    Educational Work（教育工作）
+  </h1>
+  <div class="pub-list">
+
+    <div class="pub">
+      <div class="pub-left">
+        <img class="intro-img frame" src="images/acm2025.png">
+      </div>
+      <div class="pub-right">
+        <div class="title">
+         2025第十八届吉林省大学生程序设计竞赛
+        </div>
+        <div class="参赛学生">
+          <font style="font-size: 11pt;">
+            李露、赵炳炎、梁政，邓浩东、崔智瑞，潘煜
+          </font>
+        </div>
+		  <div class="指导老师">
+          <font style="font-size: 11pt;">
+            杨宇晶, 刘国成
+          </font>
+        </div>
+        <div class="publish">
+          <span class="place">吉林省二等奖两项</span>
+          <span class="place"></span>
+        </div>
+        </div> 
+      </div>
 
 
+	      <div class="pub">
+      <div class="pub-left">
+        <img class="intro-img frame" src="images/lqb2024.png">
+      </div>
+      <div class="pub-right">
+        <div class="title">
+         2025第十六届蓝桥杯全国软件和信息技术应用人才大赛
+        </div>
+        <div class="参赛学生">
+          <font style="font-size: 11pt;">
+            邓浩东，陈琪
+          </font>
+        </div>
+		  <div class="指导老师">
+          <font style="font-size: 11pt;">
+            <b>张光瞳</b>
+          </font>
+        </div>
+        <div class="publish">
+          <span class="place">吉林省三等奖两项</span>
+          <span class="place"></span>
+        </div>
+        </div> 
+      </div>
+	  
+    <div class="pub">
+      <div class="pub-left">
+        <img class="intro-img frame" src="images/ai2024.jpg">
+      </div>
+      <div class="pub-right">
+        <div class="title">
+         2024第五届吉林省大学生人工智能创新大赛
+        </div>
+        <div class="参赛学生">
+          <font style="font-size: 11pt;">
+            李一飞，王思雨，孙婉桐，杨文慧
+          </font>
+        </div>
+		  <div class="指导老师">
+          <font style="font-size: 11pt;">
+            <b>张光瞳</b>, 姚思雨
+          </font>
+        </div>
+        <div class="publish">
+          <span class="place">吉林省二等奖一项</span>
+          <span class="place"></span>
+        </div>
+
+        </div> 
+      </div>
+
+	  
+    </div>
+	</div>
+    </div>
 
 <!-- 
 <div style="display: flex; justify-content: center; align-items: center;">
