--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="images/acm2025.png">
+        <img class="intro-img frame" src="images/acm2025.jpg">
       </div>
       <div class="pub-right">
         <div class="title">
@@ -880,12 +880,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="参赛学生">
           <font style="font-size: 11pt;">
-            李露、赵炳炎、梁政，邓浩东、崔智瑞，潘煜
+            参赛学生：李露、赵炳炎、梁政，邓浩东、崔智瑞，潘煜
           </font>
         </div>
 		  <div class="指导老师">
           <font style="font-size: 11pt;">
-            杨宇晶, 刘国成
+            指导老师：杨宇晶, 刘国成
           </font>
         </div>
         <div class="publish">
@@ -898,7 +898,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	      <div class="pub">
       <div class="pub-left">
-        <img class="intro-img frame" src="images/lqb2024.png">
+        <img class="intro-img frame" src="images/lqb2025.jpg">
       </div>
       <div class="pub-right">
         <div class="title">
@@ -906,12 +906,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="参赛学生">
           <font style="font-size: 11pt;">
-            邓浩东，陈琪
+            参赛学生：邓浩东，陈琪
           </font>
         </div>
 		  <div class="指导老师">
           <font style="font-size: 11pt;">
-            <b>张光瞳</b>
+            指导老师：<b>张光瞳</b>
           </font>
         </div>
         <div class="publish">
@@ -931,12 +931,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="参赛学生">
           <font style="font-size: 11pt;">
-            李一飞，王思雨，孙婉桐，杨文慧
+            参赛学生：李一飞，王思雨，孙婉桐，杨文慧
           </font>
         </div>
 		  <div class="指导老师">
           <font style="font-size: 11pt;">
-            <b>张光瞳</b>, 姚思雨
+           指导老师：<b>张光瞳</b>, 姚思雨
           </font>
         </div>
         <div class="publish">
