--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div id="timeline" class="timeline-brief">
     <h1 class="md-heading text-left">
       <i class="fa fa-tasks" aria-hidden="true"></i>
-      Experiences
+      Experiences（个人经历）
     </h1>
   
     <div class="timeline-body">
