--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		中国计算机协会（CCF）计算机应用委员会执行委员，中国计算机协会（CCF）会员。
 		2025年获批国家自然科学基金委青年基金（青C）支持。
 		近两年来，在国际顶级学术平台（包括CCF-A、SCI一区TOP）等发表人工智能领域文章近十篇。
+		现协助指导吉林大学硕士研究生，指导同学均有顶级学术成果发表/在投。
       <br>
     </p>
 
