--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="authors">
               <font style="font-size: 11pt;">
-                <b>Guangtong Zhang</b>b>, Qihua Liang*, Zhiyi Mo, Ning Li, Bineng Zhong
+                <b>Guangtong Zhang</b>, Qihua Liang*, Zhiyi Mo, Ning Li, Bineng Zhong
               </font>
             </div>
             <div class="publish">
@@ -438,7 +438,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="authors">
               <font style="font-size: 11pt;">
-                <b>Guangtong Zhang</b>b>, Qihua Liang*, Ning Li, Zhiyi Mo, Bineng Zhong
+                <b>Guangtong Zhang</b>, Qihua Liang*, Ning Li, Zhiyi Mo, Bineng Zhong
               </font>
             </div>
             <div class="publish">
